modules/gdscript/tests/scripts/analyzer/errors/invalid_concatenation_dictionary.gd
func test():
	print({"hello": "world"} + {"godot": "engine"})
